@@ -4,18 +4,22 @@
 \title{Assign Model Parameters}
 
 \description{
-    Assign starting values to the free parameters of a model.  This function cannot assign values to free parameters with NA labels.
+    Modify the attribues of parameters in a model.  This function cannot modify parameters that have NA labels.
 }
 
 \usage{
-omxSetParameters(model, names, values, indep = FALSE)
+omxSetParameters(model, labels, free = NA, values = NA,
+	lbound = NA, ubound = NA, indep = FALSE)
 }
 
 \arguments{
    \item{model}{a MxModel object.}
-   \item{names}{a vector of free parameter names.}
-   \item{values}{a vector of free parameter values.}   
-   \item{indep}{set parameters in independent submodels.}
+   \item{labels}{a character vector of parameter names.}
+   \item{free}{a boolean vector of parameter free/fixed designations.} 
+   \item{values}{a numeric vector of parameter values.} 
+   \item{lbound}{a numeric vector of lower bound values.} 
+   \item{ubound}{a numeric vector of upper bound values.} 
+   \item{indep}{boolean. set parameters in independent submodels.}
 }
 
 \seealso{
@@ -26,6 +30,6 @@ omxSetParameters(model, names, values, indep = FALSE)
 
 A <- mxMatrix('Full', 3, 3, labels = c('a','b', NA), free = TRUE, name = 'A')
 model <- mxModel(A, name = 'model')
-model <- omxSetParameters(model, c('a', 'b'), c(1, 2))
+model <- omxSetParameters(model, c('a', 'b'), values = c(1, 2))
 
 }
