@@ -11,6 +11,7 @@ trunk
 * renaming 'lbounds' argument to 'lbound' in omxMnor()
 * renaming 'ubounds' argument to 'ubound' in omxMnor()
 * renaming 'cov' argument to 'covariance' in omxAllInt()
+* new signature for omxSetParameters(model, labels, free, values, lbound, ubound, indep)
 
 Release 0.2.10-1172 (Mar 14, 2010)
 ==================================
